@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-08-27T02:29:52Z",
+  "timestamp" : "2022-08-27T08:27:57Z",
   "count_outdated" : 617,
   "uniques_outdated" : 48,
-  "count" : 633,
+  "count" : 624,
   "uniques" : 49,
   "views" : [
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 9, 16 ],
+      "count": 7,
+      "count_minmax": [ 7, 16 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
