@@ -1,10 +1,10 @@
 {
-  "count": 16,
+  "count": 7,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 16,
+      "count": 7,
       "uniques": 1
     }
   ]
