@@ -1,3 +1,11 @@
+2022-08-27T08:27:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2938599183
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 48 617 / 49 633
+* notice: next accum: outdated-unq outdated-all / unq all: 48 617 / 49 624
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -9 / +1 +16 -0 -9 / 1 7
+* notice: removed / changed dates: [] / [2022-08-13]
+
 2022-08-27T02:29:52Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937678010
 * notice: last 14d: unq all: 1 16
